Create movie item layout

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,28 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="BlackText" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/colorBlackText</item>
+    </style>
+    <style name="GreyText" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/colorGreyText</item>
+    </style>
+
+    <style name="MovieTitleText" parent="BlackText">
+        <item name="android:textSize">@dimen/text_12</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
+
+    </style>
+    <style name="MovieCategoryText" parent="GreyText">
+        <item name="android:textSize">@dimen/text_8</item>
+        <item name="android:fontFamily">@font/roboto</item>
     </style>
 
 </resources>
