--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#2A85C6</color>
+    <color name="colorPrimaryDark">#286FA7</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorBackground">#FAFAFA</color>
+    <color name="colorBlackText">#25282B</color>
+    <color name="colorGreyText">#929292</color>
+    <color name="colorPlaceHolder">#BFBFBF</color>
 </resources>
