--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,14 @@
         <item name="android:textColor">@color/colorGreyText</item>
     </style>
 
+    <style name="TabTitleText" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">@dimen/text_12</item>
+        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
+
     <style name="MovieTitleText" parent="BlackText">
         <item name="android:textSize">@dimen/text_12</item>
         <item name="android:fontFamily">@font/roboto_medium</item>
