--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="text_8">8sp</dimen>
+    <dimen name="text_10">10sp</dimen>
     <dimen name="text_12">12sp</dimen>
 
-    <dimen name="tab_height">50dp</dimen>
+    <dimen name="tab_height">48dp</dimen>
     <dimen name="btn_like_placeholder_height">24dp</dimen>
 
     <dimen name="space_0">0dp</dimen>
