--- a/app/src/main/res/layout/view_tab.xml
+++ b/app/src/main/res/layout/view_tab.xml
@@ -5,34 +5,26 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/space_8"
-        android:layout_marginRight="@dimen/space_8"
         android:orientation="horizontal">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/tab_title"
+            style="@style/TabTitleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp">
-
-            <TextView
-                android:id="@+id/tab_title"
-                style="@style/TabTitleText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:gravity="center"
-                android:maxLines="2"
-                tools:text="FAVOURITE" />
-        </LinearLayout>
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxLines="1"
+            tools:text="FAVOURITE" />
 
         <LinearLayout
             android:id="@+id/badge_container"
             android:layout_width="wrap_content"
             android:layout_height="16dp"
-            android:layout_marginStart="12dp"
+            android:layout_marginStart="@dimen/space_8"
             android:background="@drawable/bg_badge"
             android:gravity="center"
+            android:visibility="gone"
             android:minWidth="16dp">
 
             <TextView
@@ -42,8 +34,7 @@
                 android:textAlignment="center"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/text_10"
-                tools:text="1"
-                android:visibility="gone"/>
+                android:text="20" />
         </LinearLayout>
     </LinearLayout>
 </layout>
