Setup error state

--- a/app/src/main/res/layout/fragment_movie_list.xml
+++ b/app/src/main/res/layout/fragment_movie_list.xml
@@ -101,6 +101,11 @@
             android:id="@+id/rv_movie_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
+        <include
+            android:id="@+id/layout_error"
+            layout="@layout/view_error"
+            android:visibility="gone" />
     </LinearLayout>
 
 
