Setup movie genre to content movie item

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -16,6 +16,7 @@
             android:minHeight="?android:attr/actionBarSize"
             app:tabIndicatorColor="@android:color/white"
             app:tabGravity="fill"
+            app:tabIndicatorHeight="@dimen/space_3"
             app:tabMode="fixed"/>
 
         <androidx.viewpager.widget.ViewPager
