--- a/app/src/main/res/layout/view_movie_item.xml
+++ b/app/src/main/res/layout/view_movie_item.xml
@@ -47,21 +47,26 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/space_8"
+                    android:lines="2"
+                    android:maxLines="2"
+                    android:ellipsize="end"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toLeftOf="@+id/btn_like"
-                    app:layout_constraintTop_toTopOf="@+id/btn_like"
-                    app:layout_constraintBottom_toBottomOf="@+id/btn_like"
+                    app:layout_constraintTop_toBottomOf="@id/img_movie"
                     tools:text="Tomorrowland"
                     android:text="@{rowViewModel.movieTitle}"/>
 
                 <ImageView
                     android:id="@+id/btn_like"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:gravity="center"
+                    loadResource="@{rowViewModel.btnLikeDrawable}"
                     android:layout_margin="@dimen/space_8"
-                    android:background="@drawable/ic_like_active"
                     app:layout_constraintTop_toBottomOf="@+id/img_movie"
-                    app:layout_constraintRight_toRightOf="parent" />
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:clickable="true"
+                    android:onClick="@{() -> rowViewModel.onLike()}"/>
 
                 <TextView
                     android:id="@+id/tv_movie_genre"
@@ -72,7 +77,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/btn_like"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
                     tools:text="Action, thriller"
                     android:lines="1"
                     android:ellipsize="end"
