--- a/app/src/main/res/layout/view_movie_item.xml
+++ b/app/src/main/res/layout/view_movie_item.xml
@@ -39,7 +39,9 @@
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    loadImage="@{rowViewModel.imageUrl}"/>
+                    loadImage="@{rowViewModel.imageUrl}"
+                    android:clickable="true"
+                    android:onClick="@{() -> rowViewModel.onClick()}"/>
 
                 <TextView
                     android:id="@+id/tv_movie_title"
@@ -61,7 +63,7 @@
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:gravity="center"
-                    loadResource="@{rowViewModel.btnLikeDrawable}"
+                    liked="@{rowViewModel.liked}"
                     android:layout_margin="@dimen/space_8"
                     app:layout_constraintTop_toBottomOf="@+id/img_movie"
                     app:layout_constraintRight_toRightOf="parent"
