--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -3,9 +3,12 @@
     <dimen name="text_8">8sp</dimen>
     <dimen name="text_10">10sp</dimen>
     <dimen name="text_12">12sp</dimen>
+    <dimen name="text_14">14sp</dimen>
+    <dimen name="text_16">16sp</dimen>
 
     <dimen name="tab_height">48dp</dimen>
     <dimen name="btn_like_placeholder_height">24dp</dimen>
+    <dimen name="width_textview_placeholder">150dp</dimen>
 
     <dimen name="space_0">0dp</dimen>
     <dimen name="space_2">2dp</dimen>
@@ -15,4 +18,5 @@
     <dimen name="space_8">8dp</dimen>
     <dimen name="space_12">12dp</dimen>
     <dimen name="space_16">16dp</dimen>
+    <dimen name="space_24">24dp</dimen>
 </resources>
